[package]
name = "rust-rbf"
version = "0.1.0"
authors = ["Coy Humphrey <coy@coyhumphrey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3"